fix(@clayui/css): update footer spacing in the modal on cadmin

--- a/packages/clay-css/src/scss/cadmin/variables/_modals.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_modals.scss
@@ -150,8 +150,8 @@ $cadmin-modal-footer-border-width: $cadmin-modal-header-border-width !default;
 $cadmin-modal-footer-box-shadow: null !default;
 $cadmin-modal-footer-color: null !default;
 $cadmin-modal-footer-height: null !default;
-$cadmin-modal-footer-padding-x: 12px !default;
-$cadmin-modal-footer-padding-y: 12px !default;
+$cadmin-modal-footer-padding-x: 24px !default;
+$cadmin-modal-footer-padding-y: 16px !default;
 
 $cadmin-modal-footer-height-mobile: null !default;
 
